event card alignment fix

--- a/app/styles/partials/utils.scss
+++ b/app/styles/partials/utils.scss
@@ -26,6 +26,10 @@
   height: 100% !important;
 }
 
+.h-80perc {
+  height: 80% !important;
+}
+
 .pointer {
   cursor: pointer;
 }
